--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.7",
     "@types/pg": "^8.16.0",
+    "prisma": "^7.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/client": "^7.3.0",
     "cors": "^2.8.5",
     "pg": "^8.17.1"
   }
